syntax = "proto3";

option go_package="../pb;pb";

message QuestionInfo {
  int64 id = 1; // id
  string title = 2; // 标题
  string content = 3; // 内容
  string tags = 4; // 标签列表（json 数组）
  string answer = 5; // 题目答案
  int32 submitNum = 6; // 题目提交数
  int32 acceptedNum = 7; // 题目通过数
  string judgeCase = 8; // 判题用例（json 数组）
  string judgeConfig = 9; // 判题配置（json 对象）
  int32 thumbNum = 10; // 点赞数
  int32 favourNum = 11; // 收藏数
  int64 userId = 12; // 创建用户 id
  string createTime = 13; // 创建时间
  string updateTime = 14; // 更新时间
  int32 isDelete = 15; // 是否删除
}